# bigquery-lite

./: .env.docker  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT.md  FRONTEND_README.md  GETTING_STARTED.md  PROTOC_INTEGRATION_STRATEGY.md  README.md  SECURITY.md  capture-screenshots.js  capture-ui-screenshot.js  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  requirements-cli.txt  requirements.txt  run_all_tests.py  setup.py  test_schema_registry.py  validate_rust_engine.py
adr/: 0001-dual-engine-architecture.md  README.md
app/: api.py
backend/: .dockerignore  .gitignore  Dockerfile  app.py  protobuf_ingester.py  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  schema_registry.py  schema_translator.py  test_protobuf_ingestion.py  test_rust_engine.py
backend/runners/: __init__.py  clickhouse_runner.py  (+1 more)
bigquery-lite-engine/: Cargo.toml
bigquery-lite-engine/benches/: query_benchmark.rs
bigquery-lite-engine/src/: benchmarks.rs  engine.rs  error.rs  lib.rs  python_bindings.rs  utils.rs
bigquery-lite-engine/tests/: engine_tests.rs
bqlite/: __init__.py  cli.py
data/: schema_registry.db
docs/: DESIGN.md  README.md  onboarding.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
notebooks/: duckdb_exploration.ipynb
playwright/: capture-workflow.spec.js  onboard.spec.js  onboard.spec.ts
playwright-report/: index.html
scripts/: scheduler.py
test_schemas/: sample_schema.json  user_events.proto
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
(+47 files in other folders)
